--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -32,7 +32,7 @@
 		</table>
 		
 		<%= render :partial => "shared/skill_title" %>
-		<Div id="skills" style=display:none>
+		<Div id="skills" style=display:inline>
 			<%# The team's skills are loaded here via the above Ajax call %>
 
 			<br>		
