--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -22,7 +22,7 @@
 		</td>
 	</table>
 	
-	<Div id="skills_title" style=display:none>
+	<Div id="skills_title" style=display:inline>
 		
 		<table width=100% border=0 cellpadding=0 cellspacing=0>
 			<tr>
