--- a/app/views/skills/_skill.html.erb
+++ b/app/views/skills/_skill.html.erb
@@ -6,7 +6,7 @@
 				<td class="Underline" width=5%><%= (skill.availability)? "#{image_tag('tick-icon.png')}" : "#{image_tag('cross-icon.gif')}" %>&nbsp;</td>
 				<td class="Underline" width=10% ><%= skill.complexity %>&nbsp;</td>
 				<td class="Underline" width=10% align='right'><%= skill.number_people_required %>&nbsp;</td>
-				<td class='Underline' width=10% align='right'><%= skill.get_availability(skill.id) %></td>
+				<td class='Underline' width=10% align='right'><%# skill.get_availability(skill.id) %></td>
 				<td class="Underline" width=10% align='right'><%= skill.red_threshold %>&nbsp;</td>
 				<td class="Underline" width=10% align='right'><%= skill.amber_threshold %>&nbsp;</td>
 				<td class='Underline' width=10% align='right'><%= number_to_percentage(skill.get_currency(skill.id), {:precision => 1}) %></td>
