--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -15,14 +15,14 @@
 				<font size="3"><%= link_to_remote "Show team skill definitions...", :url => {:action => 'show_skills', "id" => "#{@team.id}" }%></font>
 			</Div>
 		
-			<Div id="skills_collapse" style=display:inline %>
+			<Div id="skills_collapse" style=display:none %>
 				<%# "#{image_tag('collapse.png')}" %>
 				<font size="3"><%= link_to_remote "Hide team skill definitions...", :url => {:action => 'hide_skills', "id" => "#{@team.id}"  }%></font>
 			</Div>
 		</td>
 	</table>
 	
-	<Div id="skills_title" style=display:inline>
+	<Div id="skills_title" style=display:none>
 		
 		<table width=100% border=0 cellpadding=0 cellspacing=0>
 			<tr>
@@ -32,7 +32,7 @@
 		</table>
 		
 		<%= render :partial => "shared/skill_title" %>
-		<Div id="skills" style=display:inline>
+		<Div id="skills" style=display:none>
 			<%# The team's skills are loaded here via the above Ajax call %>
 
 			<br>		
