--- a/app/views/shared/_outline.html.erb
+++ b/app/views/shared/_outline.html.erb
@@ -6,7 +6,7 @@
 		
 		<td align="right" valign="center">
 			<% if controller.action_name == "show" %>
-				<%= "#{image_tag('edit.png')}" %> <%= link_to "Edit", :action => 'edit' %>
+				<%= "#{image_tag('public/images/edit.png')}" %> <%= link_to "Edit", :action => 'edit' %>
 			<% end %>
 						
 		</td>
