--- a/app/views/shared/_submit.html.erb
+++ b/app/views/shared/_submit.html.erb
@@ -2,7 +2,7 @@
 	<tr>
 		<td align=right>
 			<% if controller.action_name != "show" %>
-				<p><%= image_submit_tag("ubmit.png") %></p>
+				<p><%= image_submit_tag("Submit.png") %></p>
 			<% end %>
 		</td>
 	</tr>
